# jcodemunch-mcp

./: README.md  USER_GUIDE.md  pyproject.toml
src/jcodemunch_mcp/: server.py
src/jcodemunch_mcp/parser/: extractor.py  languages.py
src/jcodemunch_mcp/storage/: token_tracker.py
src/jcodemunch_mcp/summarizer/: batch_summarize.py
tests/: test_languages.py
