[project]
name = "jcodemunch-mcp"
version = "0.2.8"
description = "Token-efficient MCP server for source code exploration via tree-sitter AST parsing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "tree-sitter-language-pack>=0.7.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.0"]

[project.scripts]
jcodemunch-mcp = "jcodemunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcodemunch_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [".claude/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
